src/test/run-pass/command-line-args.rs


fn main(args: [istr]) { log args[0]; }
