src/test/compile-fail/no-core-attribute.rs
// error-pattern:unresolved name: debug
#[no_core];

fn main() {
    log(debug, 0);
}